--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@jitsi/react-sdk": "^1.4.4",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -50,7 +51,7 @@
     "embla-carousel-react": "^8.3.0",
     "emoji-mart": "^5.6.0",
     "firebase": "^12.0.0",
-    "framer-motion": "^12.20.2",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
