--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "emoji-mart": "^5.6.0",
+    "express": "^5.1.0",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
